• vogel-krypt/skript.latex   · Ich hatte mein Dokument nicht gespeichert. Daher fehlen in der letzten     Version die Änderung der $i$‐ten --> $i$. Jetzt sind sie dabei.
  · Einen Indexeintrag für schwacher Schlüssel eingefügt.

  · An dem Absatz über die Sicherheit des IDEA gefeilt und das \help gelöst.

  · Hyperref mag kein "~ in Überschriften. Daher einen normalen Bindestrich
    verwendet.

  · Den Abschnitt über die RC‐Familie überarbeitet.

  · Ich habe ein nettes Papier von RSA Labortories gefunden, dem ich auch
    einige Verweise auf andere Quellen entnommen habe.


git-svn-id: https://svn.lug-jena.de/uni-skripte@597 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/vogel-krypt/skript.latex
+++ b/vogel-krypt/skript.latex
@@ -785,8 +785,8 @@ den Buchstaben aus $X$ indiziert und die Eintragungen sind die (zufällig
 angeordneten) Buchstaben von $Y$. Siehe \autoref{tab:1}. Wir definieren zwei
 Abbildungen:
 \begin{align*}
-  f_{1}(x_{j}) &= \{ y\in Y\colon y \text{~steht in der $j$-ten Zeile} \}\\
-  f_{2}(x_{i}) &= \{ y\in Y\colon y \text{~steht in der $i$-ten Spalte} \}
+  f_{1}(x_{j}) &= \{ y\in Y\colon y \text{~steht in der $j$. Zeile} \}\\
+  f_{2}(x_{i}) &= \{ y\in Y\colon y \text{~steht in der $i$. Spalte} \}
 \end{align*}
 
 Es sei $m=m_{1}m_{2}\dotso m_{k}$ der zu verschlüsselnde Klartext und
@@ -1301,7 +1301,7 @@ Laplace: Entwickeln einer Spalte oder Zeile:
 \begin{gather*}
   \det A = \sum_{j=1}^{n} (-1)^{i+j} a_{ij} A_{ij}
 \end{gather*}
-wobei $A_{ij}$ diejenige Matrix ist, die durch Streichen der $i$-ten Zeile und
+wobei $A_{ij}$ diejenige Matrix ist, die durch Streichen der $i$. Zeile und
 $j$-ten Spalte aus $A$ entsteht.
 
 Frage: Wann besitzt $A$ eine Inverse? Es muss gelten:
@@ -2062,7 +2062,7 @@ acht Bits.
   durchsuchen.
 
   Quelle: 
- \item Es gibt bei DES schwache Schlüssel, die für alle Runden den gleichen
+ \item Es gibt bei DES \highl[Schlüssel!schwacher]{schwache Schlüssel}, die für alle Runden den gleichen
   Rundenschlüssel erzeugen. Aber man kann diese auch einfach beim Einsatz
   vermeiden.
 
@@ -2166,7 +2166,7 @@ verbreitet/Hardware vorhanden.
 \section{International Data Encryption Algorithm (IDEA)}
 
 Der International Data Encryption Algorithm (kurz \highl{IDEA}) wurde zu
-beginn der 90er Jahre des zwanzigsten Jahrhunderts in einer
+beginn der neunziger Jahre des zwanzigsten Jahrhunderts in einer
 Gemeinschaftsarbeit von James Massey und Xueija Lai von der ETH~Zürich und der
 Ascom Systec~AG entwickelt. Die Ascom Systec~AG hält zum gegenwärtigen
 Zeitpunkt noch einige Patente für IDEA. Denoch wird der Algorithmus im
@@ -2180,7 +2180,7 @@ wird ein Brute-Force-Angriff gegenüber DES wesentlich erschwert.
 \begin{figure}[ht]
   \centering
   \input{idea.pdf_t}
-  \caption{Blockschema für den Ablauf der $i$ten Runde der IDEA"~Verschlüsselung}
+  \caption{Blockschema für den Ablauf der $i$. Runde der IDEA"~Verschlüsselung}
   \label{fig:idea}
 \end{figure}
 
@@ -2216,34 +2216,51 @@ Nach der 8.~Runde gibt es eine Schlussrunde:
      x_{4}' &= x_{4}\odot k_{9_{4}}
 \end{align*}
 
-Bisher sind keine Sicherheitsprobleme mit IDEA bekannt und trotz der
-komplexeren Runden ist das Verfahren doppelt so schnell wie DES.
-\help{In der Wikipedia steht, dass IDEA viele schwache Schlüssel hat. Ist das
-  kein Sicherheitsproblem?}
+Die Sicherheit von IDEA ist auf der Unverträglichkeit der drei
+unterschiedlichen arithmetischen Operationen begründet. Es ist zwar eine
+Klasse von \highl[Schlüssel!schwacher]{schwachen Schlüsseln} mit
+$2^{65}$~Elementen bekannt, denoch ist der Algorithmus durch die komplexen
+Runden sicher gegen lineare und differentielle Kryptoanalyse.\cite{idea-save}
 
-\section{RC"~Familie}
+\section{RC-Familie}
 
-In den 1990ern wurden von Ron Rivest und Mr.\,C von der RSA Data Security eine
-Reihe von Verschlüsselungsverfahren entwickelt, die als \highl{RC"~Familie}
-zusammengefasst werden.
-\help{Woher kommt das C im RC?}
+In den 1990ern wurden von Ronald Rivest von der RSA Data Security eine Reihe
+von Verschlüsselungsverfahren entwickelt, die als
+\highl[RC-Familie]{RC"~Familie} (Ron's Code oder Rivest's Cipher)
+zusammengefasst werden.\cite[Abs.\,3.6.2--4]{rsafaq}
 
-\begin{description}
- \item[RC2] \index{RC2} arbeitet mit einer Klartextblocklänge von 64~Bit. Die
-  Schlüssellänge kann zwischen 48 und 1024~Bit frei gewählt werden. RC2 wurde
-  1997 veröffentlicht.
-  \help{Rundenzahl von RC2?}
+\highl{RC2} bezeichnet eine Feistelchiffre, die mit 18~Runden und einer
+Klartextblocklänge von 64~Bit arbeitet. Die Schlüssellänge muss ein Vielfaches
+von acht sein und kann zwischen einschließlich 8 und 128~Bit gewählt werden.
 
- \item[RC5] \index{RC5} wurde 1995 veröffentlich. Bei diesem Algorithmus sind
-  die drei Größen Klartextblocklänge, Schlüssellänge und Rundenzahl variabel.
-  Eine gängige Kombination ist 32~Bit Blocklänge, ein 128~Bit Schlüssel und
-  12~Runden. RC5 ist sicher gegen differentielle und lineare Kryptoanalyse.
-  \help{Wurde bewiesen, dass RC5 sicher gegen diff. und lin. KryAna ist oder
-    ist das nur so eine Pauschalaussage?}
+RC2 wurde 1987 als Ersatz für DES entwickelt und ist als solcher auch
+schneller und, bei geeigneter Wahl des Schlüssels, sicherer als DES. RC2
+wurde, bis es 1996 von einem Unbekannten im Usenet veröffentlicht wurde,
+geheim gehalten.
 
- \item[RC6] war 1998 einer der Kandidaten in der letzten Ausscheidungsrunde
-  für AES.
-\end{description}
+\highl{RC5} wurde 1994 ebenfalls für die RSA Data Security entwickelt und
+weist ungewöhnlich viele Freiheiten bei der Wahl der Parameter auf. Die
+Blocklänge kann 32, 64 oder 128~Bit sein. Die Schlüssellänge kann von 0 bis
+2040~Bit und die Rundenanzahl von 0 bis 255 gewählt werden.
+
+Es gibt drei Operationen: Schlüsselerweiterung, Ver- und Entschlüsselung. Bei
+der Schlüsselerweiterung wird in Abhängigkeit von der Rundenanzahl eine
+Tabelle für die Ver"~/""Entschlüsselung erzeugt. Die Ver"~/""Entschlüsselung
+arbeitet mit Addition, exklusiven Oder und Bitrotation. Durch einen extrem
+einfachen Aufbau ist der RC5-Algorithmus leicht zu implementieren und zu
+verifizieren.
+\begin{align*}
+  x_{1}' &= rot(x_{1} \oplus x_{2}, x_{2}) \boxplus K_{1} &
+  x_{2}' &= rot(x_{2} \oplus x_{1}', x_{1}') \boxplus  K_{2}
+\end{align*}
+
+RC5 ist sicher gegen differentielle und lineare Kryptoanalyse.\cite{rc5save}
+
+Um die Kriterien für die Ausschreibung des Advanced Encryption Standards zu
+erfüllen, wurde RC5 etwas verändert und als \highl{RC6} eingereicht. Die
+Blockgröße, Schlüssellänge und Rundeanzahl können aus den selben Bereichen wie
+bei RC5 gewählt werden. RC6 wurde 1998 veröffentlich und gelangte auch in die
+letzte Ausscheidungsrunde für den AES.
 
 % 6.12.
 
@@ -2395,6 +2412,13 @@ von $p$ in $\F_{p^{k}}$
   644--654, 1976
  \bibitem{adleman} L.\,Adleman, R.\,Rivest, A.\,Shamir: "`On digital
   signatures and public key cryptosystems"', MIT Press, 1977
+ \bibitem{rsafaq} RSA Laboratories: "`RSA Laboratories' Frequently Asked
+  Questions About Today's Cryptography, Version 4.1"', RSA Security Inc.,
+  2000,\\ \url{ftp://ftp.rsasecurity.com/pub/labsfaq/rsalabs_faq41.pdf}
+ \bibitem{rc5save} Y.L. Yin: "`The RC5 encryption algorithm: two years on"',
+  CryptoBytes (3) 2, 1997
+ \bibitem{idea-save} [DGV94] J.\,Daemen, R.\,Govaerts, J.\, Vandewalle: "`Weak 
+  keys for IDEA, Advances in Cryptology -- Crypto '93"', Springer-Verlag, 1994
 \end{thebibliography}
 
 \chapter{Übungsaufgaben}
