--- a/vogel-krypt/skript.latex
+++ b/vogel-krypt/skript.latex
@@ -2915,6 +2915,267 @@ benutzt
   c(x) = 03 x^{3}+ 01 x^{2} + 01 x + 02
 \end{gather*}
 mit dem Inversen $c^{-1}(x) = 0B x^{3} + 0D x^{2} + 09 x + 0E$
+
+% 20.12.
+
+\paragraph{Notationen für AES}
+Es werden Bytes von je 8~Bits verwendet $a=a_{7}a_{6}\dotso a_{0}
+\in\F_{256}$. Für die Eingabeblocklänge 128~Bits ergeben sich Bytefolgen der
+Länge~16.
+\begin{gather*}
+  s = a^{(0)}a^{(1)}\dotso a^{(14)}a^{15}
+\end{gather*}
+die als Matrizen geschrieben werden.
+\begin{gather*}
+  s =
+     \begin{pmatrix}
+       a^{(0)}& a^{(4)}& a^{(8)}& a^{(12)}\\
+       a^{(1)}& a^{(5)}& \dotso\\
+       a^{(2)}& \dotso \\
+       a^{(3)}& a^{(7)}& a^{(11)}& a^{(15)}
+     \end{pmatrix} =
+     \begin{pmatrix}
+       a^{(0,0)}& a^{(0,1)}& a^{(0,2)}& a^{(0,3)}\\
+       a^{(1,0)}& a^{(1,1)}& \dotso\\
+       a^{(2,0)}& \dotso \\
+       a^{(3,0)}& a^{(3,1)}& a^{(3,2)}& a^{(3,3)}
+     \end{pmatrix}
+     = a^{z,s}
+\end{gather*}
+mit je 4~Zeilen und 4~Spalten. Weiter wird festgelegt: Die Eingabe in die
+$i$.\,Runde wird mit $s_{i,a}$ bezeichnet
+\begin{gather*}
+  s_{i,a} =
+     \begin{pmatrix}
+       a^{(0,0)}& a^{(0,1)}& a^{(0,2)}& a^{(0,3)}\\
+       \vdots \\
+       a^{(3,0)}& \dotso && a^{(3,3)}
+     \end{pmatrix}
+\end{gather*}
+Das Ergebnis des ersten Schritts (\highl{Byte-Sub}) wird mit $s_{i,b}$
+bezeichnet und ist die Eingabe des zweiten Schritts (\highl{Row-Shift}).
+\begin{gather*}
+  s_{i,b} =
+     \begin{pmatrix}
+       b^{(0,0)}& b^{(0,1)}& b^{(0,2)}& b^{(0,3)}\\
+       \vdots \\
+       b^{(3,0)}& \dotso && b^{(3,3)}
+     \end{pmatrix}
+\end{gather*}
+Das Ergbnis des zweiten Schritts $s_{i,c}$ ist die Eingabe des dritten
+Schritts (\highl{Column-Mix}). Das Ergebnis des dritten Schrittes ist
+$s_{i,d}$ und die Eingabe für den vierten Schritt (\highl{Schlüsseladdition}).
+Dieses Ergebnis ist $s_{i+1,a}$ und die Eingabe für die $i+1$.\,Runde.
+
+Schreibweise in $\nicefrac{\F_{256}[x]}{x^{4}+1}$:
+\begin{gather*}
+  a(x) = 02 + 01x + 01x^{2}+03\quad\text{bzw.}\\
+  a = [02, 01, 01, 03]
+\end{gather*}
+
+\paragraph{Beschreibung der einzelnen Schritte}
+\begin{enumerate}[1.\,{Schritt}]
+ \item Byte-Sub
+  \begin{enumerate}
+   \item mathematischer Hintergrund: Eingabe: $a^{(z,s)}$. Zwei Transformationen:
+    \begin{enumerate}
+     \item Bestimme das multiplikative Inverse $(a^{(z,s)})^{-1}$ in
+      $\F_{256}$. Bemerkung: Falls $a^{(z,s)}= 00$, dann $(a^{(z,s)})^{-1} =
+      00$.
+
+     \item Berechne folgende affine Abbildung
+      \begin{gather*}
+        (a^{(z,s)})^{-1} = \tilde{a}_{7}\tilde{a}_{6}\dotso\tilde{a}_{0}
+      \end{gather*}
+      mit dem Ergebnis $b^{(z,s)} = b_{7}b_{6}\dotso b_{0}$
+      \begin{gather*}
+        \begin{pmatrix}
+          b_{0}\\
+          b_{1}\\
+          b_{2}\\
+          b_{3}\\
+          b_{4}\\
+          b_{5}\\
+          b_{6}\\
+          b_{7}
+        \end{pmatrix} =
+           \begin{pmatrix}
+             1& 0& 0& 0& 1& 1& 1& 1\\
+             1& 1& 0& 0& 0& 1& 1& 1\\
+             1& 1& 1& 0& 0& 0& 1& 1\\
+             1& 1& 1& 1& 0& 0& 0& 1\\
+             1& 1& 1& 1& 1& 0& 0& 0\\
+             0& 1& 1& 1& 1& 1& 0& 0\\
+             0& 0& 1& 1& 1& 1& 1& 0\\
+             0& 0& 0& 1& 1& 1& 1& 1
+           \end{pmatrix} \cdot
+           \begin{pmatrix}
+             \tilde{a}_{0}\\
+             \tilde{a}_{1}\\
+             \tilde{a}_{2}\\
+             \tilde{a}_{3}\\
+             \tilde{a}_{4}\\
+             \tilde{a}_{5}\\
+             \tilde{a}_{6}\\
+             \tilde{a}_{7}
+           \end{pmatrix} +
+           \begin{pmatrix}
+             1\\ 1\\ 0\\ 0\\ 0\\ 1\\ 1
+           \end{pmatrix}
+      \end{gather*}
+
+      Bemerkung: Diese Abbildung kann als Abbildung über dem Polynomring
+      $\nicefrac{\F_{2}[x]}{x^{8}+1}$ verstanden werden.
+      \begin{gather*}
+        \begin{pmatrix}
+          b_{0}& b_{1}& b_{2}& b_{3}& b_{4}& b_{5}& b_{6}& b_{7}
+        \end{pmatrix}
+           =
+           \begin{pmatrix}
+             1& 1& 1& 1& 1& 0& 0& 0
+           \end{pmatrix}
+           \cdot
+           \begin{pmatrix}
+             \tilde{a}_{0}& \tilde{a}_{1}& \tilde{a}_{2}& \tilde{a}_{3}&
+             \tilde{a}_{4}& \tilde{a}_{5}& \tilde{a}_{5}& \tilde{a}_{6}&
+             \tilde{a}_{7}
+           \end{pmatrix}
+           +
+           \begin{pmatrix}
+             1& 1& 0& 0& 0& 1& 1& 0
+           \end{pmatrix}
+      \end{gather*}
+    \end{enumerate}
+
+   \item Die Darstellung -- Praktische Umsetzung: Table-lookup\\
+    zusammengefasst ist das Resultat
+    \begin{gather*}
+      b^{(z,s)} = S_{8}(a^{(z,s)})
+    \end{gather*}
+    das in einer Tabelle ($16\times16$) dargestell werden kann. Die
+    niederwertigen Bits $a_{3}, a_{2}, a_{1}$ und $a_{0}$ bestimmen die
+    Spalte der Tabelle und die Bits $a_{7}, a_{6}, a_{5}$ und $a_{4}$
+    bestimmen die Zeile.
+
+    Beispiel: $S_{8}(1011\,0101)$, Zeile~11 und Spalte~5. Die Tabelle
+    liefert $D5$, d.\,h. 13 und 5. $S_{8}(1011\,0101) = (1101\,0101)$.
+  \end{enumerate}
+ \item Row-Shift
+  \begin{enumerate}
+   \item mathematischer Hintergrund: Rechnen in
+    $\nicefrac{\F_{2^{8}}[x]}{x^{4}+1}$ zeilenweise:
+    \begin{align*}
+      [c^{(0,0)}, c^{(0,1)}, c^{(0,2)}, c^{(0,3)}]
+         &= [b^{(0,0)}, b^{(0,1)}, b^{(0,2)}, b^{(0,3)}]\\
+      [c^{(1,0)}, c^{(1,1)}, c^{(1,2)}, c^{(1,3)}]
+         &= [b^{(1,0)}, b^{(1,1)}, b^{(1,2)}, b^{(1,3)}] \otimes 01x^{3}\\
+      [c^{(2,0)}, c^{(2,1)}, c^{(2,2)}, c^{(2,3)}]
+         &= [b^{(2,0)}, b^{(2,1)}, b^{(2,2)}, b^{(2,3)}] \otimes 01x^{2}\\
+      [c^{(3,0)}, c^{(3,1)}, c^{(3,2)}, c^{(3,3)}]
+         &= [b^{(3,0)}, b^{(3,1)}, b^{(3,2)}, b^{(3,3)}] \otimes 01 x
+    \end{align*}
+
+   \item Die Darstellung
+    \begin{gather*}
+      \begin{pmatrix}
+        c^{(0,0)}& c^{(0,1)}& c^{(0,2)}& c^{(0,3)}\\
+        c^{(1,0)}& c^{(1,1)}& c^{(1,2)}& c^{(1,3)}\\
+        c^{(2,0)}& c^{(2,1)}& c^{(2,2)}& c^{(2,3)}\\
+        c^{(3,0)}& c^{(3,1)}& c^{(3,2)}& c^{(3,3)}
+      \end{pmatrix} =
+         \begin{pmatrix}
+           b^{(0,0)}& b^{(0,1)}& b^{(0,2)}& b^{(0,3)}\\
+           b^{(1,1)}& b^{(1,2)}& b^{(1,3)}& b^{(1,0)}\\
+           b^{(2,2)}& b^{(2,3)}& b^{(2,0)}& b^{(2,1)}\\
+           b^{(3,3)}& b^{(3,0)}& b^{(3,1)}& b^{(3,2)}
+         \end{pmatrix}
+    \end{gather*}
+  \end{enumerate}
+
+ \item Column-Mix:
+  \begin{enumerate}
+   \item mathematischer Hintergrund:\\
+    spaltenweise
+    \begin{gather*}
+      \begin{pmatrix}
+        d^{(0,s)} \\ d^{(1,s)}\\ d^{(2,s)}\\ d^{(3,s)}
+      \end{pmatrix} = S_{32}
+         \begin{pmatrix}
+           c^{(0,s)} \\ c^{(1,s)}\\ c^{(2,s)}\\ c^{(3,s)}
+         \end{pmatrix}
+    \end{gather*}
+
+    Beschreibung der Abbildung $S_{32}$ \todo{Bild von $S_{32}$}
+
+    \begin{gather*}
+      \mathit{xtime}(x_{7}x_{6}\dotso x_{0}) =
+         \begin{cases}
+           x_{6}x_{5}x_{4}x_{3}x_{2}x_{1}x_{0} 0&\colon x_{7}=0\\
+           (x_{6}x_{5}x_{4}x_{3}x_{2}x_{1}x_{0} 0) \oplus (0001\,1011)&
+           \colon x_{7} = 1
+         \end{cases}
+    \end{gather*}
+
+    kompakte Darstellung in $\nicefrac{\F_{2^{8}}[x]}{x^{4}+1}$:
+    \begin{gather*}
+      [d^{(0,s)} d^{(1,s)}, d^{(2,s)}, d^{(3,s)}] =
+         [c^{(0,s)} c^{(1,s)}, c^{(2,s)}, c^{(3,s)}] \otimes [02\:01\:01\:03]
+    \end{gather*}
+    Matrixschreibweise:
+    \begin{align*}
+      \begin{pmatrix}
+        d^{(0,s)}\\ d^{(1,s)},\\ d^{(2,s)},\\ d^{(3,s)}
+      \end{pmatrix} &=
+         \begin{pmatrix}
+           02 (c^{(0,s)}\oplus c^{(1,s)}) \oplus c^{(1,s)} \oplus
+           c^{(2,s)} \oplus c^{(3,s)}\\
+           02 (c^{(1,s)} \oplus c^{(2,s)}) \oplus c^{(0,s)} \oplus
+           c^{(2,s)} \oplus c^{(3,s)}\\
+           02 (c^{(2,s)} \oplus c^{(3,s)}) \oplus c^{(0,s)} \oplus
+           c^{(1,s)} \oplus c^{(3,s)}\\
+           02 (c^{(3,s)} \oplus c^{(0,s)}) \oplus c^{(0,s)} \oplus
+           c^{(1,s)} \oplus c^{(2,s)}
+         \end{pmatrix}\\
+      &= \begin{pmatrix}
+           02& 03& 01& 01\\
+           01& 02& 03& 01\\
+           01& 01& 02& 03\\
+           03& 01& 01& 02
+         \end{pmatrix} \cdot
+         \begin{pmatrix}
+           d^{(0,s)}\\ d^{(1,s)}\\ d^{(2,s)}\\ d^{(3,s)}
+         \end{pmatrix}
+    \end{align*}
+
+   \item Die Darstellung: wieder in einer Tabelle
+  \end{enumerate}
+
+ \item Die Schlüsseladdition
+  \begin{gather*}
+    S_{i+1, a} = S_{i,d} \oplus k_{i}
+  \end{gather*}
+\end{enumerate}
+
+\subsubsection{Struktur des Entschlüsselungsalgorithmus}
+
+Jeder Verschlüsselungsschritt besitzt einen Umkehrschritt
+\begin{enumerate}
+ \item $(\text{Byte-Sub})^{-1}$ existiert, da die affine Abbildung eine
+  Umgekehrabbildung besitzt und das Inverse des Inversen des ursprüngliche
+  Element im Körper liefert.
+
+ \item $(\text{Row-Shift})^{-1}$ existiert ebenfalls. Einfach eine Rechtsverschiebung.
+
+ \item $(\text{Column-Shift})^{-1}$ existiert, da $a(x) = 02+01x+ 01x^{2} + 03x^{3}$
+  im Ring $\nicefrac{\F_{2^{8}}[x]}{x^{4}+1}$ das inverse Polynom $a^{-1}(x)$
+  hat.
+
+ \item $(\text{Key-Add})^{-1}$ existiert auch; $\oplus$ mit demselben Schlüssel.
+\end{enumerate}
+
+Bei AES ist auch der Hintergrund bekannt, wärend bei DES dies nicht war.
+(Diff-Kryptoanalyse war IBM seit 1970 bekannt)
+
 \clearpage
 \appendix
 
